Agrest modules reorg